k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: pyui
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 5000
